<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".Telaprincipal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ficha" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/user_profile"
        android:textColor="#FFFDFD"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPerfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#80FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#2E2A2A"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/enter_your_name"
                android:textColor="#000000"
                android:textColorHint="#888888"
                android:padding="10dp"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="#2E2A2A"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/enter_your_age"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHint="#888888"
                android:padding="10dp"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_example"
                android:textColor="#2E2A2A"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editHeight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="12dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/enter_your_height"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#888888" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_kg"
                android:textColor="#2E2A2A"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/editWeight"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/enter_your_weight"
                android:inputType="numberDecimal"
                android:textColor="#000000"
                android:textColorHint="#888888"
                android:padding="10dp"
                android:layout_marginBottom="18dp" />

            <Button
                android:id="@+id/btnSalvarPerfil"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_button"
                android:elevation="4dp"
                android:onClick="saveProfileButton"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
