<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:focusableInTouchMode="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/teladefundo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="452dp"
        android:layout_height="448dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logos" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        android:textColor="#000000"
        android:textColorHint="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="85dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="303dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColorHint="#F8F8F8"
        android:textSize="24sp"
        android:textStyle="bold"
        app:barrierMargin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="207dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#020202"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        tools:ignore="OnClick,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>