<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:focusableInTouchMode="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/teladefundo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="452dp"
        android:layout_height="448dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logos" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="Senha"
        android:inputType="text|textPassword"
        android:textColor="#000000"
        android:textColorHint="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="551dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="text|textPassword"
        android:textColor="#000000"
        android:textColorHint="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="612dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_length"
        android:textColor="#0D0D0D"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="303dp"
        android:layout_height="60dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:onClick="register"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColorHint="#F8F8F8"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,OnClick"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="662dp" />

</androidx.constraintlayout.widget.ConstraintLayout>